Added controllers, models, viewmodels, and views.

--- a/StLouisRestaurantGuide/Views/Home/Index.cshtml
+++ b/StLouisRestaurantGuide/Views/Home/Index.cshtml
@@ -1,8 +1,9 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "St. Louis Restaurant Guide";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome!</h1>
+    @*@<p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>*@
+    <p>This website will allow you to add and find restaurants around the St.Louis area that you would like to visit.</p>
 </div>
