--- a/StLouisRestaurantGuide/Views/Category/Index.cshtml
+++ b/StLouisRestaurantGuide/Views/Category/Index.cshtml
@@ -1,5 +1,6 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model IEnumerable<StLouisRestaurantGuide.ViewModels.Categories.CategoryListItemViewModel>
+
 @{
+    ViewData["Title"] = "Index";
 }
+<h1>List of </h1>
