--- a/StLouisRestaurantGuide/Views/Home/Index.cshtml
+++ b/StLouisRestaurantGuide/Views/Home/Index.cshtml
@@ -2,8 +2,16 @@
     ViewData["Title"] = "St. Louis Restaurant Guide";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome!</h1>
+
+
+<div class="hero-section">
+    <h1 class="display-4">Welcome to St. Louis Restaurant Guide!</h1>
+</div>
+
+<div class="text-center" style="position:relative; top: 400px;">
+
     @*@<p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>*@
-    <p>This website will allow you to add and find restaurants around the St.Louis area that you would like to visit.</p>
+
+    @*<img src="https://cdn2.hercampus.com/styles/hcxo_tile_standard/s3/hero-images/2019/01/18/här-hittar-du-prisvärd-brunch-i-stockholm.jpg?timestamp=1547834598" alt="Food Image">*@
+    <p>This website will allow you to add and find restaurants around the St.Louis area that you would like to visit. You can also filter by categories so that you can search for restaurants based on the type of food you are looking for. </p>
 </div>
