--- a/StLouisRestaurantGuide/Views/Category/Create.cshtml
+++ b/StLouisRestaurantGuide/Views/Category/Create.cshtml
@@ -1,6 +1,65 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model StLouisRestaurantGuide.ViewModels.Categories.CategoryCreateViewModel
+
 @{
+    ViewData["Title"] = "Create";
 }
-<p>Category create page</p>
+
+<h1>Create a Restaurant Category</h1>
+
+<hr />
+<div class="row">
+    <div class="col-md-4">
+        <form asp-action="Create">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            @*<div class="form-group">
+                    <label asp-for="Id" class="control-label"></label>
+                    <input asp-for="Id" class="form-control" readonly />
+                </div>*@
+            <div class="form-group">
+                <label asp-for="Name" class="control-label"></label>
+                <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
+            @*<div class="form-group">
+                    <label asp-for="Description" class="control-label"></label>
+                    <input asp-for="Description" class="form-control" />
+                    <span asp-validation-for="Description" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="HoursOfOperation " class="control-label">Hours Of Operation</label>
+                    <input asp-for="HoursOfOperation" class="form-control" />
+                    <span asp-validation-for="HoursOfOperation" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Address " class="control-label"></label>
+                    <input asp-for="Address" class="form-control" />
+                    <span asp-validation-for="Address" class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
+                    <select asp-for="Region" required>
+                        <option value=""></option>
+                        <option>North St. Louis County</option>
+                        <option>South St. Louis County</option>
+                        <option>St. Charles County</option>
+                        <option>St. Louis City</option>
+                        <option>West St. Louis County</option>
+                    </select>
+                    <span asp-validation-for="Region" class="text-danger"></span>
+                </div>*@
+
+
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-primary" />
+            </div>
+        </form>
+    </div>
+</div>
+
+<div>
+    @*<a asp-action="Index">Back to List</a>*@
+</div>
+
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
