--- a/StLouisRestaurantGuide/wwwroot/css/site.css
+++ b/StLouisRestaurantGuide/wwwroot/css/site.css
@@ -54,3 +54,28 @@ body {
   height: 60px;
   line-height: 60px; /* Vertically center the text there */
 }
+
+
+/* Custom */
+
+.hero-section {
+    width: 100%;
+    height: 400px;
+    font-size: 2em;
+    font-weight: bolder;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-image: url(../img/sushi-hero-image.jpg);
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 58px;
+}
+
