--- a/StLouisRestaurantGuide/Views/Shared/_Layout.cshtml
+++ b/StLouisRestaurantGuide/Views/Shared/_Layout.cshtml
@@ -39,6 +39,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Restaurant" asp-action="Create">Add a Restaurant</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Restaurant" asp-action="Index">Restaurants</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Category" asp-action="Index">Categories</a>
                         </li>
                     </ul>
