--- a/StLouisRestaurantGuide/Views/Restaurant/Edit.cshtml
+++ b/StLouisRestaurantGuide/Views/Restaurant/Edit.cshtml
@@ -1,5 +1,86 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model StLouisRestaurantGuide.ViewModels.Restaurants.RestaurantEditViewModel
+
 @{
+    ViewData["Title"] = "Edit";
+}
+
+<h1>Edit Restaurant -  @Model.Name</h1>
+
+<hr />
+<div class="row">
+    <div class="col-md-4">
+        <form asp-action="Edit">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <input type="hidden" asp-for="RestaurantId" />
+
+                <label asp-for="Name" class="control-label"></label>
+                <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Description" class="control-label"></label>
+                <input asp-for="Description" class="form-control" />
+                <span asp-validation-for="Description" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="HoursOfOperation" class="control-label">Hours Of Operation</label>
+                <input asp-for="HoursOfOperation" class="form-control" />
+                <span asp-validation-for="HoursOfOperation" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Address" class="control-label"></label>
+                <input asp-for="Address" class="form-control" />
+                <span asp-validation-for="Address" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Region" class="control-label"></label>
+                <select asp-for="Region" class="form-control">
+
+                    <option value=""></option>
+                    <option>North St. Louis County</option>
+                    <option>South St. Louis County</option>
+                    <option>St. Charles County</option>
+                    <option>St. Louis City</option>
+                    <option>West St. Louis County</option>
+
+                </select>
+                <span asp-validation-for="Region" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="CategoryIds" class="control-label"></label>
+                <div class="scroll-checkbox">
+                    @foreach (var category in @Model.Categories)
+                    {
+                        <div class="form-check">
+
+                            @if (Model.CategoryIds.Contains(category.Id))
+                            {
+                                <input type="checkbox" class="form-check-input" name="CategoryIds" value="@category.Id" checked />
+                                <label class="form-check-label">@category.Name</label>
+                            }
+                            else
+                            {
+                                <input type="checkbox" class="form-check-input" name="CategoryIds" value="@category.Id" />
+                                <label class="form-check-label">@category.Name</label>
+                            }
+                        </div>
+                    }
+                </div>
+            </div>
+
+            <div class="form-group">
+                <input type="submit" value="Edit" class="btn btn-primary" />
+            </div>
+        </form>
+    </div>
+</div>
+
+<div>
+    <a asp-action="Index">Back to List</a>
+</div>
+
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
