--- a/StLouisRestaurantGuide/Views/RestaurantReview/Create.cshtml
+++ b/StLouisRestaurantGuide/Views/RestaurantReview/Create.cshtml
@@ -1,5 +1,57 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@model StLouisRestaurantGuide.ViewModels.RestaurantReviews.RestaurantReviewCreateViewModel
+
+
+    @{
+        ViewData["Title"] = "Create";
+    }
+
+<h1>Rate The @ViewBag.restaurantName</h1>
+    <hr />
+    <div class="row">
+        <div class="col-md-4">
+            <form asp-action="Create">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label class="control-label">Restaurant Name</label>
+                    <input class="form-control" readonly value="@ViewBag.restaurantName" />
+                </div>
+                <div class="form-group">
+                    <label asp-for="RestaurantId" class="control-label"></label>
+                    <input asp-for="RestaurantId" class="form-control" readonly />
+                </div>
+                <div class="form-group">
+                    <label asp-for="ReviewHeadline" class="control-label">Review Title</label>
+                    <input asp-for="ReviewHeadline" class="form-control" />
+                    <span asp-validation-for="ReviewHeadline" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Rating" class="control-label"></label>
+                    <select asp-for="Rating" class="form-control">
+                        <option>1</option>
+                        <option>2</option>
+                        <option>3</option>
+                        <option>4</option>
+                        <option>5</option>
+                    </select>
+                    <span asp-validation-for="Rating" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Review " class="control-label">Review</label>
+                    <textarea rows="5" asp-for="Review" class="form-control"></textarea>
+                    <span asp-validation-for="Review" class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
+                    <input type="submit" value="Create" class="btn btn-primary" />
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <div>
+        <a asp-controller="Restaurant" asp-action="Index">Back to List</a>
+    </div>
+
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
