--- a/StLouisRestaurantGuide/Views/RestaurantReview/Index.cshtml
+++ b/StLouisRestaurantGuide/Views/RestaurantReview/Index.cshtml
@@ -1,5 +1,15 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model StLouisRestaurantGuide.Models.RestaurantReview
+
 @{
+    ViewData["Title"] = "Index";
 }
+
+<h1>Index</h1>
+
+<p>
+    <a asp-action="Create">Create New</a>
+</p>
+<table class="table">
+    <thead>
+        <tr>
+</table>
