commit before doing migration

--- a/StLouisRestaurantGuide/Views/Restaurant/Details.cshtml
+++ b/StLouisRestaurantGuide/Views/Restaurant/Details.cshtml
@@ -15,7 +15,7 @@
 </p>
 <h2>Description</h2>
 <p>@Model.Description</p>
-
+<button type="button" class="btn btn-info">Add To My Visit Wish List</button>
 <hr />
 
 <h3>Categories</h3>
