partial working user visit list

--- a/StLouisRestaurantGuide/Views/UserVisitList/Index.cshtml
+++ b/StLouisRestaurantGuide/Views/UserVisitList/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@model StLouisRestaurantGuide.Models.UserVisitList
+﻿@model IEnumerable<StLouisRestaurantGuide.Models.Restaurant>
+
+
 
 @{
     ViewData["Title"] = "Index";
@@ -9,46 +11,18 @@
 <div>
 
     <hr />
-    <table border="1" cellpadding="10">
-        <tr>
-            <th bgcolor="#cce6ff">Location</th>
-            <th width="40%" bgcolor="#cce6ff">Description</th>
-            <th bgcolor="#cce6ff">Hours Of Operation</th>
-            <th bgcolor="#cce6ff">Average Rating</th>
-            <th bgcolor="#cce6ff">Rate</th>
-            <th bgcolor="#cce6ff">Edit</th>
-        </tr>
-        @*@foreach (var restaurant in Model)
 
-        {
-            <tr>
-                <td> <a asp-controller="Restaurant" asp-action="Details" asp-route-RestaurantId="@restaurant.Id">@restaurant.Name</a></td>
-                <td>@restaurant.Description</td>
-                <td>@restaurant.HoursOfOperation</td>
-                @if (restaurant.RestaurantReviews.Count > 0)
-                {
-                    <td>@restaurant.AverageRating</td>
-                }
-                else
-                {
-                    <td>not reviewed</td>
-                }
-                <td>
-                    <a asp-controller="RestaurantReview" asp-action="Create" asp-route-RestaurantId="@restaurant.Id">Rate</a>
-                </td>
-                <td>
-                    <a asp-controller="Restaurant" asp-action="Edit" asp-route-RestaurantId="@restaurant.Id">Edit</a>
-                </td>
+    @foreach (var restaurant in Model)
 
-            </tr>
-        }*@
+    {
+        <h2>
+            @restaurant.Name 
+        </h2>
+        <p>@restaurant.Description  </p>
+    }
 
-    </table>
+
 </div>
 <div>
 
 </div>
-
-
-
-<p>ftyhfhyfyh</p>
