UserVisitList and Role are working

--- a/StLouisRestaurantGuide/Views/Home/Index.cshtml
+++ b/StLouisRestaurantGuide/Views/Home/Index.cshtml
@@ -8,10 +8,11 @@
     <h1 class="display-4">Welcome to St. Louis Restaurant Guide!</h1>
 </div>
 
-<div class="text-center" style="position:relative; top: 400px;">
-
-    @*@<p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>*@
-
-    @*<img src="https://cdn2.hercampus.com/styles/hcxo_tile_standard/s3/hero-images/2019/01/18/här-hittar-du-prisvärd-brunch-i-stockholm.jpg?timestamp=1547834598" alt="Food Image">*@
-    <p>This website will allow you to add and find restaurants around the St.Louis area that you would like to visit. You can also filter by categories so that you can search for restaurants based on the type of food you are looking for. </p>
+<div class="jumbotron jumbotron-fluid"  style="position:relative; top: 400px;">
+    <div class="container">
+        <h2>Your Guide to Choosing Where to Eat Faster</h2>
+        <p class="lead">St. Louis Restaurant Guide was built with you in mind. Our goal is to stop the indecisive "what's for dinner" conversations and to get you to experience the St. Louis food scene.</p>
+        
+        <small>Create your account, browse our restaurant list, read reviews, and add it to your visit list.</small>
+    </div>
 </div>
