Search Functionality works

--- a/StLouisRestaurantGuide/Views/Restaurant/Index.cshtml
+++ b/StLouisRestaurantGuide/Views/Restaurant/Index.cshtml
@@ -9,41 +9,54 @@
 <div>
 
     <hr />
-    <table border="1" cellpadding="10">
-        <tr>
-            <th bgcolor="#cce6ff">Location</th>
-            <th width="40%" bgcolor="#cce6ff">Description</th>
-            <th bgcolor="#cce6ff">Hours Of Operation</th>
-            <th bgcolor="#cce6ff">Average Rating</th>
-            <th bgcolor="#cce6ff">Rate</th>
-            <th bgcolor="#cce6ff">Edit</th>
-        </tr>
-        @foreach (var restaurant in Model)
 
-        {
+    @* Print error message if no restaurant exist in search *@
+    @if (!Model.Any())
+    {
+        <h2>Sorry no restaurants exist with that name</h2>
+    }
+
+    @* If restaurants exist, table should be viewable*@
+    @if (Model.Any())
+    {
+        <table border="1" cellpadding="10">
             <tr>
-                <td> <a asp-controller="Restaurant" asp-action="Details" asp-route-RestaurantId="@restaurant.Id">@restaurant.Name</a></td>
-                <td>@restaurant.Description</td>
-                <td>@restaurant.HoursOfOperation</td>
-                @if (restaurant.RestaurantReviews.Count > 0)
-                {
-                    <td>@restaurant.AverageRating</td>
-                }
-                else
-                {
-                    <td>not reviewed</td>
-                }
-                <td>
-                    <a asp-controller="RestaurantReview" asp-action="Create" asp-route-RestaurantId="@restaurant.Id">Rate</a>
-                </td>
-                <td>
-                    <a asp-controller="Restaurant" asp-action="Edit" asp-route-RestaurantId="@restaurant.Id">Edit</a>
-                </td>
-
+                <th bgcolor="#cce6ff">Location</th>
+                <th width="40%" bgcolor="#cce6ff">Description</th>
+                <th bgcolor="#cce6ff">Hours Of Operation</th>
+                <th bgcolor="#cce6ff">Average Rating</th>
+                <th bgcolor="#cce6ff">Rate</th>
+                <th bgcolor="#cce6ff">Edit</th>
             </tr>
-        }
+            @foreach (var restaurant in Model)
 
-    </table>
+            {
+                <tr>
+                    <td> <a asp-controller="Restaurant" asp-action="Details" asp-route-RestaurantId="@restaurant.Id">@restaurant.Name</a></td>
+                    <td>@restaurant.Description</td>
+                    <td>@restaurant.HoursOfOperation</td>
+                    @if (restaurant.RestaurantReviews.Count > 0)
+                    {
+                        <td>@restaurant.AverageRating</td>
+                    }
+                    else
+                    {
+                        <td>not reviewed</td>
+                    }
+                    <td>
+                        <a asp-controller="RestaurantReview" asp-action="Create" asp-route-RestaurantId="@restaurant.Id">Rate</a>
+                    </td>
+                    <td>
+                        <a asp-controller="Restaurant" asp-action="Edit" asp-route-RestaurantId="@restaurant.Id">Edit</a>
+                    </td>
+
+                </tr>
+            }
+
+        </table>
+
+    }
+
 </div>
 <div>
     
