--- a/StLouisRestaurantGuide/Views/Home/Index.cshtml
+++ b/StLouisRestaurantGuide/Views/Home/Index.cshtml
@@ -8,11 +8,30 @@
     <h1 class="display-4">Welcome to St. Louis Restaurant Guide!</h1>
 </div>
 
-<div class="jumbotron jumbotron-fluid"  style="position:relative; top: 400px;">
-    <div class="container">
-        <h2>Your Guide to Choosing Where to Eat Faster</h2>
-        <p class="lead">St. Louis Restaurant Guide was built with you in mind. Our goal is to stop the indecisive "what's for dinner" conversations and to get you to experience the St. Louis food scene.</p>
-        
-        <small>Create your account, browse our restaurant list, read reviews, and add it to your visit list.</small>
+<div style="position:relative; top: 400px;">
+
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h2>Your Guide to Choosing Where to Eat Faster</h2>
+            <p class="lead">St. Louis Restaurant Guide was built with you in mind. Our goal is to stop the indecisive "what's for dinner" conversations and to get you to experience the St. Louis food scene.</p>
+            <hr />
+            <small>Create your account, browse our restaurant list, read reviews, and add it to your visit list.</small>
+        </div>
     </div>
+
+    <hr class="my-4">
+
+    <form asp-controller="Restaurant" asp-action="Index" method="get" style="padding-left:15px; padding-right:15px;">
+        <h3>Search for Restaurants</h3>
+        <div class="form-group">
+            <div class="input-group mb-3">
+                <input class="form-control form-control-lg" type="text" name="searchString" placeholder="Search for a Restaurant">
+                <div class="input-group-append">
+                    <input type="submit" value="Search" class="btn btn-primary" />
+                </div>
+            </div>
+        </div>
+    </form>
+
 </div>
+
